# input-dependency-analyzer

./: .gitignore  CMakeLists.txt  README.md  read.me  rtlib.c
Analysis/: :w  BasicBlockAnalysisResult.cpp  BasicBlockAnalysisResult.h  BasicBlocksUtils.cpp  BasicBlocksUtils.h  CFGTraversalPath.cpp  CFGTraversalPath.h  CLibraryInfo.cpp  CLibraryInfo.h  CMakeLists.txt  CachedFunctionAnalysisResult.cpp  CachedFunctionAnalysisResult.h  CachedInputDependencyAnalysis.cpp  CachedInputDependencyAnalysis.h  ClonedFunctionAnalysisResult.cpp  ClonedFunctionAnalysisResult.h  DependencyAnaliser.cpp  DependencyAnaliser.h  DependencyAnalysisResult.h  DependencyInfo.h  DotPrinter.cpp  DotPrinter.h  FunctionAnaliser.cpp  FunctionAnaliser.h  FunctionCallDepInfo.cpp  FunctionCallDepInfo.h  FunctionDOTGraphPrinter.cpp  FunctionDOTGraphPrinter.h  FunctionDominanceTree.cpp  FunctionDominanceTree.h  FunctionInputDependencyResultInterface.h  IndirectCallSitesAnalysis.cpp  IndirectCallSitesAnalysis.h  InputDepConfig.h  InputDepInstructionsRecorder.cpp  InputDepInstructionsRecorder.h  InputDependencyAnalysis.cpp  InputDependencyAnalysis.h  InputDependencyAnalysisInterface.h  InputDependencyAnalysisPass.cpp  (+54 more)
Analysis/include/input-dependency/Analysis/: BasicBlockAnalysisResult.h  BasicBlocksUtils.h  CFGTraversalPath.h  CLibraryInfo.h  CachedFunctionAnalysisResult.h  CachedInputDependencyAnalysis.h  ClonedFunctionAnalysisResult.h  DependencyAnaliser.h  DependencyAnalysisResult.h  DependencyInfo.h  DotPrinter.h  FunctionAnaliser.h  FunctionCallDepInfo.h  FunctionDOTGraphPrinter.h  FunctionInputDependencyResultInterface.h  IndirectCallSitesAnalysis.h  InputDependencyAnalysis.h  InputDependencyAnalysisInterface.h  InputDependencyAnalysisPass.h  InputDependencyStatistics.h  InputDependentBasicBlockAnaliser.h  InputDependentFunctionAnalysisResult.h  LLVMIntrinsicsInfo.h  LibFunctionInfo.h  LibraryInfoCollector.h  LibraryInfoFromConfigFile.h  LoopAnalysisResult.h  LoopTraversalPath.h  NonDeterministicBasicBlockAnaliser.h  NonDeterministicReflectingBasicBlockAnaliser.h  ReachableFunctions.h  ReflectingBasicBlockAnaliser.h  ReflectingDependencyAnaliser.h  STLStringInfo.h  SnakeLibraryInfo.h  Statistics.h  TransparentCachingPass.h  Utils.h  ValueDepInfo.h  dot_interfaces.h  (+2 more)
Analysis/src/: BasicBlockAnalysisResult.cpp  BasicBlocksUtils.cpp  CFGTraversalPath.cpp  CLibraryInfo.cpp  CachedFunctionAnalysisResult.cpp  CachedInputDependencyAnalysis.cpp  ClonedFunctionAnalysisResult.cpp  DependencyAnaliser.cpp  DotPrinter.cpp  FunctionAnaliser.cpp  FunctionCallDepInfo.cpp  FunctionDOTGraphPrinter.cpp  FunctionDominanceTree.cpp  IndirectCallSitesAnalysis.cpp  InputDepInstructionsRecorder.cpp  InputDependencyAnalysis.cpp  InputDependencyAnalysisPass.cpp  InputDependencyDebugInfoPrinter.cpp  InputDependencyStatistics.cpp  InputDependentBasicBlockAnaliser.cpp  InputDependentFunctions.cpp  LLVMIntrinsicsInfo.cpp  LibFunctionInfo.cpp  LibraryFunctionsDebugPass.cpp  LibraryInfoCollector.cpp  LibraryInfoFromConfigFile.cpp  LibraryInfoManager.cpp  LoggingUtils.cpp  LoopAnalysisResult.cpp  LoopTraversalPath.cpp  ModuleSizeDebugPass.cpp  NonDeterministicBasicBlockAnaliser.cpp  NonDeterministicReflectingBasicBlockAnaliser.cpp  ReachableFunctions.cpp  ReflectingBasicBlockAnaliser.cpp  STLStringInfo.cpp  Statistics.cpp  TransparentCachingPass.cpp  Utils.cpp  ValueDepInfo.cpp  (+3 more)
CutVertice/: CMakeLists.txt  CutVerticesPass.h  Graph.h
OH/: CMakeLists.txt  OH.cpp
Transforms/: .FunctionSnippet.cpp.swo  .swp  CMakeLists.txt  FunctionClone.cpp  FunctionClone.h  FunctionClonePass.cpp  FunctionClonePass.h  FunctionExtraction.cpp  FunctionExtraction.h  FunctionSnippet.cpp  FunctionSnippet.h  Utils.cpp  Utils.h
Transforms/include/input-dependency/Transforms/: FunctionClone.h  FunctionClonePass.h  FunctionExtraction.h  FunctionSnippet.h  Utils.h
Transforms/src/: FunctionClone.cpp  FunctionClonePass.cpp  FunctionExtraction.cpp  FunctionSnippet.cpp  Utils.cpp
cmake/: input-dependencyConfig.cmake.in
include/PDG/: DefUseResults.h  DominanceResults.h  FunctionPDG.h  GraphBuilder.h  InputDependencyNode.h  LLVMDominanceTree.h  LLVMMemorySSADefUseAnalysisResults.h  LLVMNode.h  PDG.h  PDGBuilder.h  PDGEdge.h  PDGGraphTraits.h  PDGLLVMNode.h  PDGNode.h  PDGSVFGNode.h  SVFGDefUseAnalysisResults.h
include/analysis/: ArgumentReachabilityAnalysis.h  CLibraryInfo.h  IndirectCallSiteResults.h  IndirectCallSitesAnalysis.h  InputDepConfig.h  InputDepInfo.h  InputDependencyAnalysis.h  InputDependencyAnalysisInterface.h  InputDependencyReachabilityAnalysis.h  InputDependencySources.h  InputDependencyStatistics.h  InputIndependencyReachabilityAnalysis.h  LLVMIntrinsicsInfo.h  LibFunctionInfo.h  LibraryInfoCollector.h  LibraryInfoFromConfigFile.h  ReachabilityAnalysis.h  STLStringInfo.h  SVFGIndirectCallSiteResults.h
lib/: CMakeLists.txt
lib/Debug/: PDGPrinter.cpp  SVFGTraversal.cpp
lib/PDG/: GraphBuilder.cpp  LLVMDominanceTree.cpp  LLVMMemorySSADefUseAnalysisResults.cpp  LLVMNode.cpp  PDGBuilder.cpp  PDGLLVMNode.cpp  SVFGDefUseAnalysisResults.cpp
lib/analysis/: ArgumentReachabilityAnalysis.cpp  CLibraryInfo.cpp  IndirectCallSitesAnalysis.cpp  InputDependencyAnalysis.cpp  InputDependencyReachabilityAnalysis.cpp  InputDependencySources.cpp  InputDependencyStatistics.cpp  InputIndependencyReachabilityAnalysis.cpp  LLVMIntrinsicsInfo.cpp  LibFunctionInfo.cpp  LibraryInfoCollector.cpp  LibraryInfoFromConfigFile.cpp  LibraryInfoManager.cpp  ReachabilityAnalysis.cpp  STLStringInfo.cpp  SVFGIndirectCallSiteResults.cpp
lib/passes/: ArgumentReachabilityAnalysisPass.cpp  GraphBuilderPass.cpp  InputDependencyAnalysisPass.cpp  InputDependencyReachabilityAnalysisPass.cpp  TransparentCachingPass.cpp
lib/utils/: Statistics.cpp  Utils.cpp  constants.cpp
library_configs/: lib_math_config.json  library_config_example.json  memcached_testapp_library_config.json  tetris_library_config.json
notes/: meeting_notes  notes_on_design
rtlib/: rtlib.bc  rtlib.c  rtlib.cpp
tests/: .run-tests.sh.swp  controlflow_test.cpp  loop_test.cpp  render_graphs.sh  run-tests.sh
(+57 files in other folders)
